# tree-sitter-liquid

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  tree-sitter.json
.github/workflows/: release.yml  test-build.yml
bindings/python/tests/: test_binding.py
bindings/swift/TreeSitterliquidTests/: TreeSitterliquidTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: deferred_variables.txt  paired.txt  unpaired.txt
