[package]
name = "tree-sitter-liquid"
description = "Silverfin Liquid grammar for the tree-sitter parsing library"
version = "0.3.0"
keywords = ["incremental", "parsing", "liquid"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/rufex/tree-sitter-liquid"
edition = "2025"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
